# EyeSeeMore

./: .gitignore  AGENTS.md  Blur-main.py  Blur-test.py  DESIGN_CustomTitleBar.md  GUI.py  GUI_PyQt.py  GUI_PyQt_Adaptive.py  GUI_PyQt_Dynamic.py  GUI_PyQt_History.py  GUI_PyQt_Modular.py  LICENSE  M.txt  README.md  Test Project_panel_PyQt6.py  Test_Project_clock_slewing_demo.py  build_installer.bat  check_gpu.py  cleanup_db.py  config_manager.py  dev_model_exporter.py  download-Non-standard-CLIP.py  download_flux.py  download_models.py  download_models_big.py  export_clip_onnx.py  fix_env.py  gradcam-test.py  gradcam.py  indexer-OSQLOCR-Page-Update.py  indexer-OSQLOCR.py  indexer-OpenCLIP-Anime.py  indexer-OpenCLIP-SQLite.py  indexer-OpenCLIP-YoLo.py  indexer-OpenCLIP.py  indexer.py  inspect_clusters.py  main-MODEL.py  main-OSQ.py  main-OSQORC.py  (+16 more)
core/: __init__.py  config_manager.py  image_action_manager.py  paths.py  search_orchestrator.py
languages/: en_US.json  zh_TW.json
src_cpp/: CMakeLists.txt
src_cpp/installer/: main_installer.cpp  resource.h  resource.rc
src_cpp/launcher/: main_launcher.cpp
src_cpp/resources/: resource.rc
themes/: base_style.qss  dark.json  light.json
ui/: __init__.py  action_handler.py  inspector_panel.py  main_window_ui.py  theme_manager.py
ui/settings_pages/: __init__.py  about_page.py  ai_engine_page.py  appearance_page.py  auto_tasks_page.py  folders_page.py  hotkeys_page.py  language_page.py  performance_page.py
ui/widgets/: __init__.py  base.py  drag_list.py  search_capsule.py
utils/: __init__.py  translator.py
